CompiledFiles/FinanceParser.py
# Generated from D:\PPL_Finance_Chatbot_01\Finance.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class FinanceParser ( Parser ):

    grammarFileName = "Finance.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'i have'", "'i got'", "'i received'", 
                     "'this month'", "'this month's salary'", "'i want'", 
                     "'to have'", "'i spent'", "'i used'", "'for'", "'in'", 
                     "'change'", "'the'", "'money'", "'to'", "'delete'", 
                     "'remove'", "'reset'", "'analyze'", "'give advice'", 
                     "'graph'", "'show graph'", "'.'", "'million'", "'m'", 
                     "'thousand'", "'k'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUMBER", "CURRENCY", "ID", "WS", "COMMA" ]

    RULE_start = 0
    RULE_statement = 1
    RULE_salaryStmt = 2
    RULE_categoryStmt = 3
    RULE_spendStmt = 4
    RULE_modifyCategoryStmt = 5
    RULE_deleteCategoryStmt = 6
    RULE_resetStmt = 7
    RULE_analyzeStmt = 8
    RULE_graphStmt = 9
    RULE_categoryList = 10
    RULE_categoryItem = 11
    RULE_amount = 12
    RULE_multiplier = 13
    RULE_category = 14
    RULE_item = 15

    ruleNames =  [ "start", "statement", "salaryStmt", "categoryStmt", "spendStmt", 
                   "modifyCategoryStmt", "deleteCategoryStmt", "resetStmt", 
                   "analyzeStmt", "graphStmt", "categoryList", "categoryItem", 
                   "amount", "multiplier", "category", "item" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    NUMBER=28
    CURRENCY=29
    ID=30
    WS=31
    COMMA=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FinanceParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FinanceParser.StatementContext)
            else:
                return self.getTypedRuleContext(FinanceParser.StatementContext,i)


        def getRuleIndex(self):
            return FinanceParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = FinanceParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.statement()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FinanceParser.T__0) | (1 << FinanceParser.T__1) | (1 << FinanceParser.T__2) | (1 << FinanceParser.T__5) | (1 << FinanceParser.T__7) | (1 << FinanceParser.T__8) | (1 << FinanceParser.T__11) | (1 << FinanceParser.T__15) | (1 << FinanceParser.T__16) | (1 << FinanceParser.T__17) | (1 << FinanceParser.T__18) | (1 << FinanceParser.T__19) | (1 << FinanceParser.T__20) | (1 << FinanceParser.T__21))) != 0)):
                    break

            self.state = 37
            self.match(FinanceParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def salaryStmt(self):
            return self.getTypedRuleContext(FinanceParser.SalaryStmtContext,0)


        def categoryStmt(self):
            return self.getTypedRuleContext(FinanceParser.CategoryStmtContext,0)


        def spendStmt(self):
            return self.getTypedRuleContext(FinanceParser.SpendStmtContext,0)


        def modifyCategoryStmt(self):
            return self.getTypedRuleContext(FinanceParser.ModifyCategoryStmtContext,0)


        def deleteCategoryStmt(self):
            return self.getTypedRuleContext(FinanceParser.DeleteCategoryStmtContext,0)


        def resetStmt(self):
            return self.getTypedRuleContext(FinanceParser.ResetStmtContext,0)


        def analyzeStmt(self):
            return self.getTypedRuleContext(FinanceParser.AnalyzeStmtContext,0)


        def graphStmt(self):
            return self.getTypedRuleContext(FinanceParser.GraphStmtContext,0)


        def getRuleIndex(self):
            return FinanceParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = FinanceParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FinanceParser.T__0, FinanceParser.T__1, FinanceParser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.salaryStmt()
                pass
            elif token in [FinanceParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.categoryStmt()
                pass
            elif token in [FinanceParser.T__7, FinanceParser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.spendStmt()
                pass
            elif token in [FinanceParser.T__11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.modifyCategoryStmt()
                pass
            elif token in [FinanceParser.T__15, FinanceParser.T__16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 43
                self.deleteCategoryStmt()
                pass
            elif token in [FinanceParser.T__17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 44
                self.resetStmt()
                pass
            elif token in [FinanceParser.T__18, FinanceParser.T__19]:
                self.enterOuterAlt(localctx, 7)
                self.state = 45
                self.analyzeStmt()
                pass
            elif token in [FinanceParser.T__20, FinanceParser.T__21]:
                self.enterOuterAlt(localctx, 8)
                self.state = 46
                self.graphStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SalaryStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def amount(self):
            return self.getTypedRuleContext(FinanceParser.AmountContext,0)


        def CURRENCY(self):
            return self.getToken(FinanceParser.CURRENCY, 0)

        def getRuleIndex(self):
            return FinanceParser.RULE_salaryStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSalaryStmt" ):
                listener.enterSalaryStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSalaryStmt" ):
                listener.exitSalaryStmt(self)




    def salaryStmt(self):

        localctx = FinanceParser.SalaryStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_salaryStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FinanceParser.T__0) | (1 << FinanceParser.T__1) | (1 << FinanceParser.T__2))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 50
            self.amount()
            self.state = 51
            self.match(FinanceParser.CURRENCY)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FinanceParser.T__3 or _la==FinanceParser.T__4:
                self.state = 52
                _la = self._input.LA(1)
                if not(_la==FinanceParser.T__3 or _la==FinanceParser.T__4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CategoryStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def categoryList(self):
            return self.getTypedRuleContext(FinanceParser.CategoryListContext,0)


        def getRuleIndex(self):
            return FinanceParser.RULE_categoryStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCategoryStmt" ):
                listener.enterCategoryStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCategoryStmt" ):
                listener.exitCategoryStmt(self)




    def categoryStmt(self):

        localctx = FinanceParser.CategoryStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_categoryStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(FinanceParser.T__5)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FinanceParser.T__6:
                self.state = 56
                self.match(FinanceParser.T__6)


            self.state = 59
            self.categoryList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpendStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def amount(self):
            return self.getTypedRuleContext(FinanceParser.AmountContext,0)


        def CURRENCY(self):
            return self.getToken(FinanceParser.CURRENCY, 0)

        def item(self):
            return self.getTypedRuleContext(FinanceParser.ItemContext,0)


        def category(self):
            return self.getTypedRuleContext(FinanceParser.CategoryContext,0)


        def getRuleIndex(self):
            return FinanceParser.RULE_spendStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpendStmt" ):
                listener.enterSpendStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpendStmt" ):
                listener.exitSpendStmt(self)




    def spendStmt(self):

        localctx = FinanceParser.SpendStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_spendStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not(_la==FinanceParser.T__7 or _la==FinanceParser.T__8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 62
            self.amount()
            self.state = 63
            self.match(FinanceParser.CURRENCY)
            self.state = 64
            self.match(FinanceParser.T__9)
            self.state = 65
            self.item()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FinanceParser.T__10:
                self.state = 66
                self.match(FinanceParser.T__10)
                self.state = 67
                self.category()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModifyCategoryStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def category(self):
            return self.getTypedRuleContext(FinanceParser.CategoryContext,0)


        def amount(self):
            return self.getTypedRuleContext(FinanceParser.AmountContext,0)


        def CURRENCY(self):
            return self.getToken(FinanceParser.CURRENCY, 0)

        def getRuleIndex(self):
            return FinanceParser.RULE_modifyCategoryStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModifyCategoryStmt" ):
                listener.enterModifyCategoryStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModifyCategoryStmt" ):
                listener.exitModifyCategoryStmt(self)




    def modifyCategoryStmt(self):

        localctx = FinanceParser.ModifyCategoryStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_modifyCategoryStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(FinanceParser.T__11)
            self.state = 71
            self.match(FinanceParser.T__12)
            self.state = 72
            self.match(FinanceParser.T__13)
            self.state = 73
            self.match(FinanceParser.T__9)
            self.state = 74
            self.category()
            self.state = 75
            self.match(FinanceParser.T__14)
            self.state = 76
            self.amount()
            self.state = 77
            self.match(FinanceParser.CURRENCY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteCategoryStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def category(self):
            return self.getTypedRuleContext(FinanceParser.CategoryContext,0)


        def getRuleIndex(self):
            return FinanceParser.RULE_deleteCategoryStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeleteCategoryStmt" ):
                listener.enterDeleteCategoryStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeleteCategoryStmt" ):
                listener.exitDeleteCategoryStmt(self)




    def deleteCategoryStmt(self):

        localctx = FinanceParser.DeleteCategoryStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_deleteCategoryStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not(_la==FinanceParser.T__15 or _la==FinanceParser.T__16):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 80
            self.category()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FinanceParser.RULE_resetStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResetStmt" ):
                listener.enterResetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResetStmt" ):
                listener.exitResetStmt(self)




    def resetStmt(self):

        localctx = FinanceParser.ResetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_resetStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(FinanceParser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnalyzeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FinanceParser.RULE_analyzeStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnalyzeStmt" ):
                listener.enterAnalyzeStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnalyzeStmt" ):
                listener.exitAnalyzeStmt(self)




    def analyzeStmt(self):

        localctx = FinanceParser.AnalyzeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_analyzeStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            _la = self._input.LA(1)
            if not(_la==FinanceParser.T__18 or _la==FinanceParser.T__19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FinanceParser.RULE_graphStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraphStmt" ):
                listener.enterGraphStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraphStmt" ):
                listener.exitGraphStmt(self)




    def graphStmt(self):

        localctx = FinanceParser.GraphStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_graphStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not(_la==FinanceParser.T__20 or _la==FinanceParser.T__21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CategoryListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def categoryItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FinanceParser.CategoryItemContext)
            else:
                return self.getTypedRuleContext(FinanceParser.CategoryItemContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FinanceParser.COMMA)
            else:
                return self.getToken(FinanceParser.COMMA, i)

        def getRuleIndex(self):
            return FinanceParser.RULE_categoryList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCategoryList" ):
                listener.enterCategoryList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCategoryList" ):
                listener.exitCategoryList(self)




    def categoryList(self):

        localctx = FinanceParser.CategoryListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_categoryList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.categoryItem()
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 89
                    self.match(FinanceParser.COMMA)
                    self.state = 90
                    self.categoryItem() 
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FinanceParser.COMMA:
                self.state = 96
                self.match(FinanceParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CategoryItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def amount(self):
            return self.getTypedRuleContext(FinanceParser.AmountContext,0)


        def CURRENCY(self):
            return self.getToken(FinanceParser.CURRENCY, 0)

        def category(self):
            return self.getTypedRuleContext(FinanceParser.CategoryContext,0)


        def getRuleIndex(self):
            return FinanceParser.RULE_categoryItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCategoryItem" ):
                listener.enterCategoryItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCategoryItem" ):
                listener.exitCategoryItem(self)




    def categoryItem(self):

        localctx = FinanceParser.CategoryItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_categoryItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.amount()
            self.state = 100
            self.match(FinanceParser.CURRENCY)
            self.state = 101
            self.match(FinanceParser.T__9)
            self.state = 102
            self.category()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AmountContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(FinanceParser.NUMBER)
            else:
                return self.getToken(FinanceParser.NUMBER, i)

        def multiplier(self):
            return self.getTypedRuleContext(FinanceParser.MultiplierContext,0)


        def getRuleIndex(self):
            return FinanceParser.RULE_amount

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAmount" ):
                listener.enterAmount(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAmount" ):
                listener.exitAmount(self)




    def amount(self):

        localctx = FinanceParser.AmountContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_amount)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(FinanceParser.NUMBER)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FinanceParser.T__22:
                self.state = 105
                self.match(FinanceParser.T__22)
                self.state = 106
                self.match(FinanceParser.NUMBER)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FinanceParser.T__23) | (1 << FinanceParser.T__24) | (1 << FinanceParser.T__25) | (1 << FinanceParser.T__26))) != 0):
                self.state = 112
                self.multiplier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FinanceParser.RULE_multiplier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplier" ):
                listener.enterMultiplier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplier" ):
                listener.exitMultiplier(self)




    def multiplier(self):

        localctx = FinanceParser.MultiplierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_multiplier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FinanceParser.T__23) | (1 << FinanceParser.T__24) | (1 << FinanceParser.T__25) | (1 << FinanceParser.T__26))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CategoryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FinanceParser.ID, 0)

        def getRuleIndex(self):
            return FinanceParser.RULE_category

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCategory" ):
                listener.enterCategory(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCategory" ):
                listener.exitCategory(self)




    def category(self):

        localctx = FinanceParser.CategoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_category)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(FinanceParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FinanceParser.ID)
            else:
                return self.getToken(FinanceParser.ID, i)

        def getRuleIndex(self):
            return FinanceParser.RULE_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem" ):
                listener.enterItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem" ):
                listener.exitItem(self)




    def item(self):

        localctx = FinanceParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(FinanceParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FinanceParser.ID:
                self.state = 120
                self.match(FinanceParser.ID)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





